--- a/lib/premiere_ecoute_web/live/discography/library_live.html.heex
+++ b/lib/premiere_ecoute_web/live/discography/library_live.html.heex
@@ -251,7 +251,7 @@
                         <span>{gettext("Loading...")}</span>
                       </div>
                     <% else %>
-                      {gettext("Load More Playlists")}
+                      {gettext("Load Playlist")}
                     <% end %>
                   </button>
                 </div>
